--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.12.4"
+    "hardhat": "^2.12.4",
+    "tailwindcss": "^3.2.7"
   }
 }
